# local_task_automation

./: command_processor.py  hello.py  intents.json  main.py  pyproject.toml  requirements.txt  voice_input.py
actions/: launch_editor.py  open_browser.py
